NYCCHKBK-6033 - Fixed alignment of new column in contracts widget

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -1869,6 +1869,13 @@ td.endCol div,
 .outerTable td.endCol div{
     margin-right: 15px;
 }
+/*td.margin-left-36 div{margin-left:36px;}*/
+/*.dataTable td.childcontracts .jspPane table td.margin-left-36 div {*/
+    /*margin: 13px 0px 13px 4036;*/
+/*}*/
+
+td.margin-left-10 div{margin-left:10px;}
+
 
 .dataTables_scrollBody{position:relative;}
 /* expandable nested child table styles */
